Added archive area

--- a/css/app.css
+++ b/css/app.css
@@ -367,6 +367,97 @@ blockquote, blockquote p { line-height: 1.25; color: #6f6f6f; }
   .column.large-centered, .columns.large-centered { position: relative; margin-left: auto; margin-right: auto; float: none !important; }
   .column.large-uncentered, .columns.large-uncentered { margin-left: 0; margin-right: 0; float: left !important; }
   .column.large-uncentered.opposite, .columns.large-uncentered.opposite { float: right !important; } }
+/* Foundation Block Grids for below small breakpoint */
+@media only screen { [class*="block-grid-"] { display: block; padding: 0; margin: 0 -0.625em; *zoom: 1; }
+  [class*="block-grid-"]:before, [class*="block-grid-"]:after { content: " "; display: table; }
+  [class*="block-grid-"]:after { clear: both; }
+  [class*="block-grid-"] > li { display: inline; height: auto; float: left; padding: 0 0.625em 1.25em; }
+  .small-block-grid-1 > li { width: 100%; padding: 0 0.625em 1.25em; }
+  .small-block-grid-1 > li:nth-of-type(n) { clear: none; }
+  .small-block-grid-1 > li:nth-of-type(1n+1) { clear: both; }
+  .small-block-grid-2 > li { width: 50%; padding: 0 0.625em 1.25em; }
+  .small-block-grid-2 > li:nth-of-type(n) { clear: none; }
+  .small-block-grid-2 > li:nth-of-type(2n+1) { clear: both; }
+  .small-block-grid-3 > li { width: 33.33333%; padding: 0 0.625em 1.25em; }
+  .small-block-grid-3 > li:nth-of-type(n) { clear: none; }
+  .small-block-grid-3 > li:nth-of-type(3n+1) { clear: both; }
+  .small-block-grid-4 > li { width: 25%; padding: 0 0.625em 1.25em; }
+  .small-block-grid-4 > li:nth-of-type(n) { clear: none; }
+  .small-block-grid-4 > li:nth-of-type(4n+1) { clear: both; }
+  .small-block-grid-5 > li { width: 20%; padding: 0 0.625em 1.25em; }
+  .small-block-grid-5 > li:nth-of-type(n) { clear: none; }
+  .small-block-grid-5 > li:nth-of-type(5n+1) { clear: both; }
+  .small-block-grid-6 > li { width: 16.66667%; padding: 0 0.625em 1.25em; }
+  .small-block-grid-6 > li:nth-of-type(n) { clear: none; }
+  .small-block-grid-6 > li:nth-of-type(6n+1) { clear: both; }
+  .small-block-grid-7 > li { width: 14.28571%; padding: 0 0.625em 1.25em; }
+  .small-block-grid-7 > li:nth-of-type(n) { clear: none; }
+  .small-block-grid-7 > li:nth-of-type(7n+1) { clear: both; }
+  .small-block-grid-8 > li { width: 12.5%; padding: 0 0.625em 1.25em; }
+  .small-block-grid-8 > li:nth-of-type(n) { clear: none; }
+  .small-block-grid-8 > li:nth-of-type(8n+1) { clear: both; }
+  .small-block-grid-9 > li { width: 11.11111%; padding: 0 0.625em 1.25em; }
+  .small-block-grid-9 > li:nth-of-type(n) { clear: none; }
+  .small-block-grid-9 > li:nth-of-type(9n+1) { clear: both; }
+  .small-block-grid-10 > li { width: 10%; padding: 0 0.625em 1.25em; }
+  .small-block-grid-10 > li:nth-of-type(n) { clear: none; }
+  .small-block-grid-10 > li:nth-of-type(10n+1) { clear: both; }
+  .small-block-grid-11 > li { width: 9.09091%; padding: 0 0.625em 1.25em; }
+  .small-block-grid-11 > li:nth-of-type(n) { clear: none; }
+  .small-block-grid-11 > li:nth-of-type(11n+1) { clear: both; }
+  .small-block-grid-12 > li { width: 8.33333%; padding: 0 0.625em 1.25em; }
+  .small-block-grid-12 > li:nth-of-type(n) { clear: none; }
+  .small-block-grid-12 > li:nth-of-type(12n+1) { clear: both; } }
+/* Foundation Block Grids for above small breakpoint */
+@media only screen and (min-width: 768px) { /* Remove small grid clearing */
+  .small-block-grid-1 > li:nth-of-type(1n+1) { clear: none; }
+  .small-block-grid-2 > li:nth-of-type(2n+1) { clear: none; }
+  .small-block-grid-3 > li:nth-of-type(3n+1) { clear: none; }
+  .small-block-grid-4 > li:nth-of-type(4n+1) { clear: none; }
+  .small-block-grid-5 > li:nth-of-type(5n+1) { clear: none; }
+  .small-block-grid-6 > li:nth-of-type(6n+1) { clear: none; }
+  .small-block-grid-7 > li:nth-of-type(7n+1) { clear: none; }
+  .small-block-grid-8 > li:nth-of-type(8n+1) { clear: none; }
+  .small-block-grid-9 > li:nth-of-type(9n+1) { clear: none; }
+  .small-block-grid-10 > li:nth-of-type(10n+1) { clear: none; }
+  .small-block-grid-11 > li:nth-of-type(11n+1) { clear: none; }
+  .small-block-grid-12 > li:nth-of-type(12n+1) { clear: none; }
+  .large-block-grid-1 > li { width: 100%; padding: 0 0.625em 1.25em; }
+  .large-block-grid-1 > li:nth-of-type(n) { clear: none; }
+  .large-block-grid-1 > li:nth-of-type(1n+1) { clear: both; }
+  .large-block-grid-2 > li { width: 50%; padding: 0 0.625em 1.25em; }
+  .large-block-grid-2 > li:nth-of-type(n) { clear: none; }
+  .large-block-grid-2 > li:nth-of-type(2n+1) { clear: both; }
+  .large-block-grid-3 > li { width: 33.33333%; padding: 0 0.625em 1.25em; }
+  .large-block-grid-3 > li:nth-of-type(n) { clear: none; }
+  .large-block-grid-3 > li:nth-of-type(3n+1) { clear: both; }
+  .large-block-grid-4 > li { width: 25%; padding: 0 0.625em 1.25em; }
+  .large-block-grid-4 > li:nth-of-type(n) { clear: none; }
+  .large-block-grid-4 > li:nth-of-type(4n+1) { clear: both; }
+  .large-block-grid-5 > li { width: 20%; padding: 0 0.625em 1.25em; }
+  .large-block-grid-5 > li:nth-of-type(n) { clear: none; }
+  .large-block-grid-5 > li:nth-of-type(5n+1) { clear: both; }
+  .large-block-grid-6 > li { width: 16.66667%; padding: 0 0.625em 1.25em; }
+  .large-block-grid-6 > li:nth-of-type(n) { clear: none; }
+  .large-block-grid-6 > li:nth-of-type(6n+1) { clear: both; }
+  .large-block-grid-7 > li { width: 14.28571%; padding: 0 0.625em 1.25em; }
+  .large-block-grid-7 > li:nth-of-type(n) { clear: none; }
+  .large-block-grid-7 > li:nth-of-type(7n+1) { clear: both; }
+  .large-block-grid-8 > li { width: 12.5%; padding: 0 0.625em 1.25em; }
+  .large-block-grid-8 > li:nth-of-type(n) { clear: none; }
+  .large-block-grid-8 > li:nth-of-type(8n+1) { clear: both; }
+  .large-block-grid-9 > li { width: 11.11111%; padding: 0 0.625em 1.25em; }
+  .large-block-grid-9 > li:nth-of-type(n) { clear: none; }
+  .large-block-grid-9 > li:nth-of-type(9n+1) { clear: both; }
+  .large-block-grid-10 > li { width: 10%; padding: 0 0.625em 1.25em; }
+  .large-block-grid-10 > li:nth-of-type(n) { clear: none; }
+  .large-block-grid-10 > li:nth-of-type(10n+1) { clear: both; }
+  .large-block-grid-11 > li { width: 9.09091%; padding: 0 0.625em 1.25em; }
+  .large-block-grid-11 > li:nth-of-type(n) { clear: none; }
+  .large-block-grid-11 > li:nth-of-type(11n+1) { clear: both; }
+  .large-block-grid-12 > li { width: 8.33333%; padding: 0 0.625em 1.25em; }
+  .large-block-grid-12 > li:nth-of-type(n) { clear: none; }
+  .large-block-grid-12 > li:nth-of-type(12n+1) { clear: both; } }
 /* Foundation Visibility HTML Classes */
 .show-for-small, .show-for-medium-down, .show-for-large-down { display: inherit !important; }
 
@@ -677,11 +768,20 @@ body { padding-top: 45px; }
 #about blockquote a { color: #26ade4; }
 #about blockquote cite { margin: 0.25em 0; text-align: right; }
 
-#map { width: 100%; height: 40em; color: white; background: #222222 url(../img/white-bg.png) fixed; }
+#map { width: 100%; height: 40em; margin-top: -5.25em; color: white; background: #222222 url(../img/white-bg.png) fixed; }
 #map h1, #map h2, #map h3, #map h4, #map h5, #map h6, #map .subheader, #map p, #map blockquote, #map a, #map small { color: white; }
 #map code, #map abbr, #map acronym { color: #d9d9d9; }
 #map .leaflet-popup-content-wrapper, #map .leaflet-popup-tip, #map .leaflet-control, #map .leaflet-control a { background-color: #222222; color: white; }
 #map #address h6 { font-family: "Segoe UI Light", Helvetica, "Segoe UI", Arial, sans-serif; font-weight: 300; font-size: 1.5em; text-align: center; margin: 0; }
+
+#archive { color: #222222; background: white url(../img/white-bg.png) fixed; }
+#archive h1, #archive h2, #archive h3, #archive h4, #archive h5, #archive h6, #archive .subheader, #archive p, #archive blockquote, #archive a, #archive small { color: #222222; }
+#archive code, #archive abbr, #archive acronym { color: black; }
+#archive .grid a { display: block; color: #26ade4; border-left: 1px dashed #222222; border-right: 1px dashed #222222; border-radius: 1em; }
+#archive .grid a:hover { color: white; background: #26ade4; }
+#archive .grid a span { display: block; padding: 0.5em 0; }
+#archive .grid a .version { border-bottom: 1px dashed #222222; margin-bottom: 1px; }
+#archive .grid a .date { border-top: 1px dashed #222222; }
 
 #footer { color: #a6a6a6; background: #f2f2f2 url(../img/white-bg.png) fixed; padding: 0.5em 0; }
 #footer h1, #footer h2, #footer h3, #footer h4, #footer h5, #footer h6, #footer .subheader, #footer p, #footer blockquote, #footer a, #footer small { color: #a6a6a6; }
