--- a/generator/layouts/archive.html.erb
+++ b/generator/layouts/archive.html.erb
@@ -1,184 +1,33 @@
-<!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <title>Geek Night Chennai - <%= start_date.strftime("%b %Y") %></title>
-        <meta name="description" content="" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-
-        <link rel="stylesheet" href="css/app.css" />
-        <link rel="stylesheet" href="css/icons/fontello.css" />
-        <!--[if IE 7]>
-            <link rel="stylesheet" href="css/icons/fontello-ie7.css" />
-        <![endif] -->
-
-        <script src="js/custom.modernizr.js"></script>
-    </head>
-    <body>
-        <!--[if lte IE 8]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/" rel="nofollow">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-
-        <header id="header" class="feature">
-            <div class="fixed">
-                <nav class="top-bar">
-                    <ul class="title-area">
-                        <li class="name"><h1><a href="/">Geek Night Chennai</a></h1></li>
-                        <li class="toggle-topbar menu-icon"><a href="#"></a></li>
-                    </ul>
-                    <section class="top-bar-section">
-                        <ul class="left">
-                            <li><a href="http://www.thoughtworks.com" target="_blank">ThoughtWorks</a></li>
-                        </ul>
-                        <ul class="right">
-                            <li><a href="/">Upcoming: <%= start_date(latest).strftime("%B %-d %Y") %></a></li>
-                            <li><a href="#about">About</a></li>
-                            <li><a href="#agenda">Agenda</a></li>
-                            <% if archives.any? %><li><a href="#archive">Previous Editions</a></li><% end %>
-                        </ul>
-                    </section>
-                </nav>
+<% render '_layout', title: start_date.strftime("%b %Y") do %>
+    <section id="intro" class="feature">
+        <div class="row">
+            <div class="large-12 columns">
+                <a href="http://www.thoughtworks.com" target="_blank">
+                    <img src="./img/tw-logo.png" alt="ThoughtWorks" align="center" />
+                </a>
+                <h1>Geek Night Chennai</h1>
             </div>
-        </header>
+        </div>
 
-        <section id="intro" class="feature">
-            <div class="row">
-                <div class="large-12 columns">
-                    <a href="http://www.thoughtworks.com" target="_blank">
-                        <img src="./img/tw-logo.png" alt="ThoughtWorks" align="center" />
-                    </a>
-                    <h1>Geek Night Chennai</h1>
-                    <h5>an open forum for geeks to connect, discuss &amp; learn latest ideas, technologies and trends in software development</h5>
-                </div>
+        <div class="row countdown">
+            <div class="small-8 small-offset-2 large-8 large-offset-2 columns date">
+                <p><%= @item[:edition] %><sup><%= @item[:edition].ordinal %></sup> edition</p>
+                <h4><%= start_date.strftime("%b %-d %Y") %></h4>
             </div>
+        </div>
+    </section>
 
-            <div class="row">
-                <div class="large-12 columns">
-                    <h3>Flashback</h3>
-                </div>
-            </div>
+    <%= render '_agenda_section' %>
 
-            <div class="row countdown">
-                <div class="small-8 small-offset-2 large-8 large-offset-2 columns date">
-                    <p><%= @item[:edition] %><sup><%= @item[:edition].ordinal %></sup> edition</p>
-                    <h4><%= start_date.strftime("%b %-d %Y") %></h4>
-                </div>
-            </div>
-        </section>
+    <%= render '_about_section' %>
 
-        <section id="agenda" class="feature">
-            <div class="row">
-                <h2>Agenda</h2>
-            </div>
+    <%= render '_archive_section' %>
 
-            <div class="timings">
-                <% @item[:agenda].each do |agenda| %>
-                  <div class="row">
-                    <div class="small-4 columns time"><p><%= agenda[:time] %> pm</p></div>
-                    <div class="small-8 columns summary"><p>
-                        <%= agenda[:name] %> <br />
-                        <% if agenda[:speaker] %>
-                            <small>by
-                            <% if agenda[:profile] %>
-                            <a href="<%= agenda[:profile] %>" rel="nofollow" target="_blank"><%= agenda[:speaker] %></a>
-                            <% else %>
-                                <%= agenda[:speaker] %>
-                            <% end %>
-                            </small>
-                        <% end %>
-                        <% if agenda[:image] %>
-                            <img src="img/speaker/<%= agenda[:image] %>" alt="<%= agenda[:speaker] %>" />
-                        <% end %>
-                    </p></div>
-                  </div>
-                <% end %>
-              </div>
-            </div>
-        </section>
+    <% render '_header_section' do %>
+        <li><a href="#about">About</a></li>
+        <li><a href="#agenda">Agenda</a></li>
+        <% if archives.any? %><li><a href="#archive">Previous Editions</a></li><% end %>
+    <% end %>
 
-        <section id="about" class="feature">
-            <div class="row">
-                <div class="large-12 columns social">
-                    <a rel="nofollow" href="https://www.facebook.com/GeeknightChennai?viewer_id=100006569229519" target="_blank" title="Like us on FaceBook"><i class="icon-like"></i></a>
-                    <a rel="nofollow" href="https://www.facebook.com/groups/chennaigeeks/" target="_blank"><i class="icon-facebook" title="FaceBook discussion group"></i></a>
-                    <a rel="nofollow" href="https://twitter.com/intent/tweet?url=twchennai.github.io/geeknight&text=Whats+up&hashtags=geeknightchennai" target="_blank" title="Tweet hashtag #geeknightchennai"><i class="icon-twitter"></i></a>
-                    <a rel="nofollow" href="mailto:geeknight.chennai@thoughtworks.com" title="Email us"><i class="icon-mail"></i></a>
-                    <!-- NOTE: Last video link is line-wrapping in small screens like iOS a rel="nofollow" href="#" title="Videos (coming soon)"><i class="icon-youtube"></i></a -->
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="large-12 columns">
-                    <blockquote>
-                        <p>Geek Night is a monthly event for geeks in Chennai to meet, share, learn &amp; collaborate. It is organized by a passionate group of programmers and sponsored by ThoughtWorks. To know more, pay a visit to the next Geek Night, or get in touch using any of the above social media.</p>
-
-                        <p>We love feedback! If you have any suggestions or cribs, feel free to fill out our <a rel="nofollow" href="https://docs.google.com/forms/d/1Xb7TWBrMY2rBzbtMKS9Fdnr63nG0C1vV6_mUUO8OT6w/viewform" target="_blank">feedback form</a>. Don't worry, its completely anonymous.</p>
-
-                        <cite>Geek Night Volunteers</cite>
-                    </blockquote>
-                </div>
-            </div>
-        </section>
-
-        <% if archives.any? %>
-        <section id="archive" class="feature">
-            <div class="row">
-                <h2>Previous Editions</h2>
-            </div>
-
-            <div class="row">
-                <div class="large-12 columns">
-                    <ul class="grid small-block-grid-2 large-block-grid-4">
-                        <% archives.each do |archive| %>
-                        <li>
-                            <a href="<%= archive.path %>">
-                                <span class="version">
-                                    <%= archive[:edition] %><sup><%= archive[:edition].ordinal %></sup> edition
-                                </span>
-                                <span class="date"><%= Time.parse(archive[:start]).strftime("%b %d") %></span>
-                            </a>
-                        </li>
-                        <% end %>
-                    </ul>
-                </div>
-            </div>
-        </section>
-        <% end %>
-
-        <footer id="footer" class="feature">
-            <div class="row">
-                <div class="large-12 columns">
-                    <p><small>
-                        Geek Night Chennai sponsored by
-                        <a rel="nofollow" target="_blank" href="//thoughtworks.com">ThoughtWorks</a><br />
-                        Built with
-                        <a rel="nofollow" target="_blank" href="//html5boilerplate.com">HTML5 Boilerplate</a>,
-                        <a rel="nofollow" target="_blank" href="//foundation.zurb.com">Zurb Foundation</a> &amp;
-                        <a rel="nofollow" target="_blank" href="//leafletjs.com">Leaflet</a>
-                        <br />
-                        Assets from <a rel="nofollow" target="_blank" href="//openstreetmap.org">OpenStreetMap</a>,
-                        <a rel="nofollow" target="_blank" href="//fontello.com">Fontello</a> &amp;
-                        <a rel="nofollow" target="_blank" href="//modernpictograms.com">Modern Pictograms</a>
-                    </small></p>
-                </div>
-            </div>
-        </footer>
-
-        <!-- Google Analytics -->
-        <script>
-          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-          ga('create', 'UA-44837835-1', 'twchennai.github.io');
-          ga('send', 'pageview');
-        </script>
-    </body>
-</html>
+    <%= render '_footer_section' %>
+<% end %>
